[tool.poetry]
name = "am-codesandbox"
version = "0.1.0"
description = ""
authors = ["あで <adelaide@fiberplane.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "am_codesandbox" }]

[tool.poetry.dependencies]
python = "^3.11"
autometrics = "^0.9"
quart = "^0.18.4"
locust = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
